[package]
name = "buzzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.8", features = ["gzip"] }
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.24"
tokio-stream = "0.1.10"
dotenv = "0.15.0"
openapi = { version = "1.35.0", path = "../twilio-rust" }

[build-dependencies]
tonic-build = "0.8"
